<resources>
    <string name="app_name">App</string>
    <string name="login_btn_text">Login</string>
    <string name="email_hint">Your Email</string>
    <string name="login_reg_btn_text">Need a new account</string>
    <string name="pass_hint">Password...</string>
    <string name="login_logo">login_log_page</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_log_out">Logout</string>
    <string name="reg_btn_text">Create new account</string>
    <string name="reg_login_text">Aready have an Account</string>
    <string name="reg_confirm_pass_text">Confirm your password</string>
    <string name="reg_password_text">Password...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description...</string>
    <string name="new_post_btn_hint">Post</string>
    <string name="post_image_desc">post image descrpiton</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_home_text">Home</string>
    <string name="blog_image_desc">Blog Image</string>
</resources>
